Use article instead of report document class
Reduce the overall footprint of the report.

--- a/doc/components/appendix.tex
+++ b/doc/components/appendix.tex
@@ -1,6 +1,6 @@
-\chapter{Appendix}
+\section{Appendix}
 
-\section{Feature List}
+\subsection{Feature List}
 \label{app:feature-list}
 
 ``but'', ``good'', ``staff'', etc.
