--- a/doc/components/titlepage.tex
+++ b/doc/components/titlepage.tex
@@ -1,30 +1,16 @@
-\titlepage%
+% \titlepage%
 
-\vspace{2cm}
-\parbox{7.3cm}{
-  Aalto University \\
-  School of Science \\
-  Master's Programme in Machine Learning and Data Mining
+\title{Fancy and Imaginative Title}
+\date{November 25, 2016}
+\author{
+  Christian Fricke\\
+  \texttt{\large christian.fricke@aalto.fi}
+  \and
+  Dan Nguyen\\
+  \texttt{\large dan.nguyen@aalto.fi}
 }
-\begin{center}
-  \sffamily
 
-  \vspace{3cm}
-  \huge Fancy and Imaginative Title \\
-
-  \vspace{3cm}
-  \huge Term Project
-\end{center}
-
-\vspace{\fill}\normalsize
-
-\begin{table}[h]
-  \begin{tabular*}{1\textwidth}{@{\extracolsep{\fill}}lr}
-    Christian Fricke                      & Matriculation Number 599168 \\
-    Dan Nguyen                            & Matriculation Number 600617 \\
-    Date of submission: November 25, 2016 & \\
-  \end{tabular*}
-\end{table}
+\maketitle
 
 %%% Local Variables:
 %%% mode: latex
