--- a/doc/main.tex
+++ b/doc/main.tex
@@ -10,15 +10,15 @@
   \input{components/titlepage}
   \input{components/abstract}
 
-  \tableofcontents
+  % \tableofcontents
 
   %% mainmatter
 
-  \input{chapters/ch01}
-  \input{chapters/ch02}
-  \input{chapters/ch03}
-  \input{chapters/ch04}
-  \input{chapters/ch05}
+  \input{sections/sec01}
+  \input{sections/sec02}
+  \input{sections/sec03}
+  \input{sections/sec04}
+  \input{sections/sec05}
 
   \appendix
 
