--- a/doc/sections/sec01.tex
+++ b/doc/sections/sec01.tex
@@ -1,4 +1,4 @@
-\chapter{Introduction}
+\section{Introduction}
 \label{chap:one}
 
 Paragraphs detailing the regression and classification problems go here.
