--- a/doc/components/titlepage.tex
+++ b/doc/components/titlepage.tex
@@ -1,14 +1,16 @@
 % \titlepage%
 
 \title{Fancy and Imaginative Title}
-\date{November 25, 2016}
+
 \author{
-  Christian Fricke\\
-  \texttt{\large christian.fricke@aalto.fi}
+  \large Christian Fricke\\[-.2em]
+  \texttt{\normalsize christian.fricke@aalto.fi}
   \and
-  Dan Nguyen\\
-  \texttt{\large dan.nguyen@aalto.fi}
+  \large Dan Nguyen\\[-.2em]
+  \texttt{\normalsize dan.nguyen@aalto.fi}
 }
+
+\date{\large November 25, 2016}
 
 \maketitle
 
