--- a/doc/sections/sec01.tex
+++ b/doc/sections/sec01.tex
@@ -1,14 +1,19 @@
 \section{Introduction}
-\label{chap:one}
+\label{sec:one}
 
-Paragraphs detailing the regression and classification problems go here.
-Example:
+Paragraphs detailing the regression and classification problems, as well as an
+overview of the Yelp data set go here.
 
-We implement only the most promising features and representations of the
-preceding studies, which are detailed in Chapter~\ref{chap:two} and
-\ref{chap:three} respectively.  A complete list of all the features employed in
-the various models and explored in the relevant literature can be found in
-Appendix~\ref{app:feature-list}.  Also, some citation \citet{bishop:2006}.
+We implement feature selection methods, regression and classification algorithms
+to produce accurate predictions for the Yelp data set.  The methods and
+experiments are detailed in Section~\ref{sec:two} and \ref{sec:three}
+respectively.  A complete list of all the features used for each task is
+detailed in Appendix~\ref{app:feature-list}.
+
+\subsection{The Data}
+
+Yelp review data: 1.\ positive votes for reviews and 2.\ review scores between 1
+and 5.
 
 %%% Local Variables:
 %%% mode: latex
