--- a/doc/sections/sec03.tex
+++ b/doc/sections/sec03.tex
@@ -1,2 +1,12 @@
 \section{Experiments}
 \label{sec:three}
+
+Outcome of success as measured against the baseline.
+
+\subsection{Simple Methods}
+
+Linear regression, polynomial regression, etc.
+
+\subsection{Ensemble}
+
+Random forest classifier?
