--- a/doc/sections/sec05.tex
+++ b/doc/sections/sec05.tex
@@ -1,2 +1,10 @@
 \section{Conclusion}
 \label{sec:five}
+
+Second degree polynomial regression kicks butt, ensemble methods are awesome and
+everything comes at a cost.
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../main"
+%%% End:
