Add moar classifiers
Also, add new fancy and imaginative title.

--- a/doc/components/titlepage.tex
+++ b/doc/components/titlepage.tex
@@ -1,6 +1,7 @@
 % \titlepage%
 
-\title{Fancy and Imaginative Title}
+\title{Beaten by the Baseline}
+% \title{How to Barely Beat the Baseline}
 
 \author{
   \large Christian Fricke\\[-.2em]
