--- a/doc/components/titlepage.tex
+++ b/doc/components/titlepage.tex
@@ -1,6 +1,6 @@
 % \titlepage%
 
-\title{Beaten by the Baseline}
+\title{Barely Beating the Baseline}
 % \title{How to Barely Beat the Baseline}
 
 \author{
