Add explanatory subtitle

--- a/doc/components/titlepage.tex
+++ b/doc/components/titlepage.tex
@@ -1,6 +1,7 @@
 % \titlepage%
 
 \title{Barely Beating the Baseline}
+\subtitle{Performance Evaluation of Regressors and Classifiers on Top-$k$ Feature Subsets}
 % \title{How to Barely Beat the Baseline}
 
 \author{
