Remove vertical space after paragraphs

--- a/doc/components/preamble.tex
+++ b/doc/components/preamble.tex
@@ -18,7 +18,7 @@
 \setkomafont{captionlabel}{\normalfont\bfseries}
 \setkomafont{pageheadfoot}{\normalfont\sffamily}
 \setkomafont{section}{\large}
-% \setlength{\parskip}{.5em}
+\setlength{\parskip}{0em}
 
 % \renewcommand*{\sectionformat}{}
 % \renewcommand*{\subsectionformat}{}
