Add performance figure caption

--- a/doc/sections/sec04.tex
+++ b/doc/sections/sec04.tex
@@ -56,7 +56,8 @@ Log-Bernoulli Loss in a table, like this~\ref{tab:regperf}, for example.
   \centering
   \includegraphics[width=\linewidth]{figures/cls_fscore_train.png}
 \end{minipage}
-\caption{}
+\caption{Performance graphs for regression (left) and classification (right) for
+  number of top-$k$ features, evaluated with MSE and \fmeasure, respectively.}
 \label{fig:training}
 \end{figure*}
 
