--- a/doc/components/titlepage.tex
+++ b/doc/components/titlepage.tex
@@ -1,8 +1,8 @@
 % \titlepage%
 
 \title{Barely Beating the Baseline}
-\subtitle{Performance Evaluation of Regressors and Classifiers on Top-$k$ Feature Subsets}
-% \title{How to Barely Beat the Baseline}
+\subtitle{Performance Evaluation of Regression and Classification Models on
+  Top-$k$ Feature Subsets}
 
 \author{
   \large Christian Fricke\\[-.2em]
