Remove superfluous and add scikit-learn references

--- a/doc/bibliography/literature.bib
+++ b/doc/bibliography/literature.bib
@@ -1,13 +1,13 @@
-@article{kruskal:1956,
-  author    = {Kruskal, Joseph B},
-  title     = {On the shortest spanning subtree of a graph and the traveling
-                  salesman problem},
-  journal   = {Proceedings of the American Mathematical Society},
-  volume    = {7},
-  number    = {1},
-  pages     = {48--50},
-  year      = {1956},
-  publisher = {JSTOR}
+@article{sklearn:2011,
+  title={Scikit-learn: Machine Learning in {P}ython},
+  author={Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+          and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+          and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+          Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+  journal={Journal of Machine Learning Research},
+  volume={12},
+  pages={2825--2830},
+  year={2011}
 }
 
 @book{bishop:2006,
@@ -18,22 +18,4 @@
   isbn      = {0387310738},
   publisher = {Springer-Verlag New York, Inc.},
   address   = {Secaucus, NJ, USA}
-}
-
-@inproceedings{charikar:1997,
-  author    = {Moses Charikar and
-               Chandra Chekuri and
-               Tom{\'{a}}s Feder and
-               Rajeev Motwani},
-  title     = {Incremental Clustering and Dynamic Information Retrieval},
-  booktitle = {Proceedings of the Twenty-Ninth Annual {ACM} Symposium on the Theory
-               of Computing, El Paso, Texas, USA, May 4-6, 1997},
-  pages     = {626--635},
-  year      = {1997},
-  crossref  = {DBLP:conf/stoc/1997},
-  url       = {http://doi.acm.org/10.1145/258533.258657},
-  doi       = {10.1145/258533.258657},
-  timestamp = {Thu, 16 Feb 2012 12:07:30 +0100},
-  biburl    = {http://dblp.dagstuhl.de/rec/bib/conf/stoc/CharikarCFM97},
-  bibsource = {dblp computer science bibliography, http://dblp.org}
 }
