Add section notes

--- a/doc/sections/sec03.tex
+++ b/doc/sections/sec03.tex
@@ -3,10 +3,22 @@
 
 Outcome of success as measured against the baseline.
 
-\subsection{Simple Methods}
+\subsection{Framework}
+
+Discuss implementation details, models, libraries (scikit-learn by
+\citet{sklearn:2011}), cross validation setting, etc.
 
 Linear regression, polynomial regression, etc.
 
-\subsection{Ensemble}
+\subsection{Model Parameters}
 
-Random forest classifier?
+Polynomial regression, $k$-NN and random forests.
+
+\subsection{Evaluation Measures}
+
+Talk about log loss being to punishing for false positives\ldots
+
+%%% Local Variables:
+%%% mode: latex
+%%% TeX-master: "../main"
+%%% End:
