--- a/doc/sections/sec04.tex
+++ b/doc/sections/sec04.tex
@@ -1,8 +1,8 @@
 \section{Results}
 \label{sec:four}
 
-Show off performance characteristics for each method using f-measure, MSE and
-Log-Bernoulli Loss in a table, like this~\ref{tab:regperf}, for example.
+Show off performance characteristics for each method using f-measure and MSE,
+like in this Table~\ref{tab:regperf}.
 
 \begin{table}[t]
   \caption{Regression performance comparison of (1) baseline, (2) linear
