--- a/doc/sections/sec03.tex
+++ b/doc/sections/sec03.tex
@@ -16,7 +16,14 @@ Polynomial regression, $k$-NN and random forests.
 
 \subsection{Evaluation Measures}
 
-Talk about log loss being to punishing for false positives\ldots
+Talk about log loss being to punishing for false positives and define
+\fmeasure{} in Equation~\ref{eq:fmeasure} as the harmonic mean of \precision{}
+($tp / (tp + fp)$) and \recall{} ($tp / (tp + fn)$).
+
+\begin{equation}\label{eq:fmeasure}
+  \text{\fmeasure} = 2 \cdot \frac{\precision \cdot \recall} {\precision +
+    \recall}
+\end{equation}\vspace{-5pt}
 
 %%% Local Variables:
 %%% mode: latex
